[tool.poetry]
name = "pypattern"
version = "0.1.0"
description = "Design Patterns"
authors = ["sacklippe"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
furo = "^2022.9.29"


[tool.poetry.group.doc.dependencies]
Sphinx = "^5.3.0"
furo = "^2022.9.29"
rst-to-myst = "^0.3.2"
myst-parser = "^0.18.1"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
